# Alina

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
examples/: CMakeLists.txt
examples/bloom/: CMakeLists.txt
examples/bloom/src/: main.cpp
examples/framebuffer/: CMakeLists.txt
examples/framebuffer/src/: main.cpp
examples/instancing/: CMakeLists.txt
examples/instancing/src/: main.cpp
examples/setup/: CMakeLists.txt
examples/setup/src/: main.cpp
examples/spirv_shader/: CMakeLists.txt  shader.frag  shader.spv  shader.vert
examples/spirv_shader/src/: main.cpp
examples/texture/: CMakeLists.txt
examples/texture/src/: main.cpp
examples/textured-quad/: CMakeLists.txt
examples/textured-quad/src/: main.cpp
examples/triangle/: CMakeLists.txt
examples/triangle/src/: main.cpp
examples/uniform-buffer/: CMakeLists.txt
examples/uniformbuffer/: CMakeLists.txt
examples/uniformbuffer/src/: main.cpp
examples/unmanaged_framebuffer/: CMakeLists.txt
examples/unmanaged_framebuffer/src/: main.cpp
examples/unmanaged_texture/: CMakeLists.txt
examples/unmanaged_texture/src/: main.cpp
include/private/alina/: opengl-buffer.hpp  opengl-commandlist.hpp  opengl-conversions.hpp  (+7 more)
src/: main.cpp
src/opengl/: opengl-buffer.cpp  opengl-commandlist.cpp  opengl-conversions.cpp  opengl-device.cpp  opengl-framebuffer.cpp  opengl-graphics-pipeline.cpp  opengl-inputlayout.cpp  opengl-sampler.cpp  opengl-shader.cpp  opengl-texture.cpp  opengl.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt
tests/example/: CMakeLists.txt  main.cpp
(+2 files in other folders)
